--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,8 +1,6 @@
 <h1>id: <%= @task.id %> 編集ページ</h1>
 
-<%= form_for(@task) do |f| %>
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
+<%= render 'form', task: @task %>
 
   <%= f.submit '登録' %>
 <% end %>
