--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -2,12 +2,15 @@
   <% if task.errors.any? %>
     <div id="error_explanation">
       <ul>
-        <% task.errors.full_tasks.each do |task| %>
-          <li><%= task %></li>
+        <% task.errors.full_messages.each do |message| %>
+          <li><%= message%></li>
         <% end %>
       </ul>
     </div>
   <% end %>
+  
+  <%= f.label :status, '進捗状況' %>
+  <%= f.text_field :status %>
 
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
